Fixing letter spacing

--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,7 +1,7 @@
 h1.heading-title{
  display: block;
  font-size: 3vw;
- letter-spacing: .5vw;
+ letter-spacing: .2vw;
  white-space: nowrap;
  text-align: center;
 }
